--- a/app/src/main/res/layout/fragment_beer_style_detail.xml
+++ b/app/src/main/res/layout/fragment_beer_style_detail.xml
@@ -5,126 +5,42 @@
     tools:context=".BeerStyleDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
-<!--    <LinearLayout-->
-<!--        android:orientation="vertical"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:weightSum="1">-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@android:color/white"-->
-<!--            android:layout_marginBottom="2dp"-->
-<!--            android:paddingTop="20dp"-->
-<!--            android:paddingLeft="10dp"-->
-<!--            android:paddingRight="10dp"-->
-<!--            android:paddingBottom="20dp">-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginBottom="2dp"
+            android:paddingTop="20dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp">
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/beer_style_name"-->
-<!--                android:id="@+id/styleNameTextView"-->
-<!--                android:layout_alignParentStart="true"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textColor="@color/colorPrimaryDark"-->
-<!--                android:textStyle="bold" />-->
-<!--        </RelativeLayout>-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/beer_style_name"
+                android:id="@+id/styleNameTextView"
+                android:layout_alignParentStart="true"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
-
-<!--        <RelativeLayout-->
-<!--            android:orientation="horizontal"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@android:color/white">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:text="ABV: "-->
-<!--                android:id="@+id/abvTextView"-->
-<!--                android:textColor="@color/colorAccent"-->
-<!--                android:paddingLeft="10dp"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:textStyle="bold"/>-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:text="SRM: "-->
-<!--                android:id="@+id/srmTextView"-->
-<!--                android:textColor="@color/colorAccent"-->
-<!--                android:paddingLeft="100dp"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:textStyle="bold"/>-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:text="IBU: "-->
-<!--                android:id="@+id/ibuTextView"-->
-<!--                android:textColor="@color/colorAccent"-->
-<!--                android:paddingLeft="200dp"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:textStyle="bold" />-->
-
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:text="Info"-->
-<!--                android:id="@+id/infoTextView"-->
-<!--                android:drawableLeft="@drawable/ic_help_outline_black_24dp"-->
-<!--                android:textColor="@color/colorTextIcons"-->
-<!--                android:paddingLeft="360dp" />-->
-
-<!--        </RelativeLayout>-->
-
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="253dp"-->
-<!--            android:background="@color/background_material_dark"-->
-<!--            android:layout_weight="1.03">-->
-<!--            <ScrollView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-<!--                <LinearLayout-->
-<!--                    android:orientation="vertical"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-
-<!--                    android:paddingLeft="30dp"-->
-<!--                    android:paddingTop="20dp"-->
-<!--                    android:paddingRight="30dp">-->
-
-
-
-<!--                    <TextView-->
-<!--                        android:layout_width="333dp"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Description : "-->
-<!--                        android:id="@+id/descriptionTextView"-->
-<!--                        android:drawablePadding="4dp"-->
-<!--                        android:textColor="@color/colorTextIcons"-->
-<!--                        android:textSize="15sp"-->
-<!--                        android:textStyle="normal|italic"-->
-<!--                        android:layout_marginBottom="10dp"-->
-<!--                        android:gravity="fill_horizontal|start|center|start|end|end|fill"-->
-<!--                        android:textIsSelectable="true" />-->
-<!--                </LinearLayout>-->
-<!--            </ScrollView>-->
-
-<!--        </RelativeLayout>-->
-<!--        <Button-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Save it to Favs!"-->
-<!--            android:id="@+id/saveButton"-->
-<!--            android:background="@color/colorAccent"-->
-<!--            android:textColor="@color/colorTextIcons"-->
-<!--            android:textSize="15sp" />-->
-<!--    </LinearLayout>-->
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save it to Favs!"
+            android:id="@+id/saveButton"
+            android:background="@color/colorAccent"
+            android:textColor="@color/colorTextIcons"
+            android:textSize="15sp" />
+    </LinearLayout>
 
 
 </FrameLayout>
