--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,96 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:padding="25dp"
     android:layout_height="match_parent"
-    android:background="@drawable/p1"
-    android:padding="16dp"
-    android:scrollbarThumbVertical="@null"
-    tools:context=".RegisterActivity">
+    android:background="@drawable/p8">
 
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+        android:layout_marginTop="35dp"
+        android:id="@+id/logoText"
+        android:fontFamily="cursive"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:text="Beer Lifesaver!"
+        android:textSize="45dp"
+        android:textColor="#ffee58" />
 
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Enter User Name"
-            android:inputType="textNoSuggestions"
-            android:maxLines="1"
-            android:paddingStart="5dp"
-            android:singleLine="true"
-            android:textColor="@color/black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Username"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark"
+        android:layout_marginTop="20dp"/>
 
+    <EditText
+        android:id="@+id/nameEditText"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="15dp"
+        android:layout_height="40dp"
+        android:background="#77ffffff" />
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Enter email address"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:paddingStart="5dp"
-            android:singleLine="true"
-            android:textColor="@color/black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Email"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark" />
 
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="15dp"
+        android:layout_height="40dp"
+        android:background="#77ffffff" />
 
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Phone number"
-            android:maxLength="12"
-            android:inputType="number"
-            android:maxLines="1"
-            android:paddingStart="5dp"
-            android:singleLine="true"
-            android:textColor="@color/black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Password"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Enter password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:paddingStart="5dp"
-            android:singleLine="true"
-            android:textColor="@color/black"/>
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="15dp"
+        android:inputType="textPassword"
+        android:layout_height="40dp"
+        android:background="#77ffffff" />
 
 
-        <Button
-            android:id="@+id/register"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="20dp"
-            android:text="Register"
-            android:textColor="@android:color/black"
-            android:background="@color/colorPrimary"
-            android:textSize="16sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Confirm Password"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark" />
 
-        <TextView
-            android:id="@+id/login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/confirmPasswordEditText"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="15dp"
+        android:inputType="textPassword"
+        android:layout_height="40dp"
+        android:background="#77ffffff" />
 
 
-</ScrollView>
+    <Button
+        android:id="@+id/createUserButton"
+        android:text="Register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFC107"/>
+
+</LinearLayout>
