--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,101 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
-
-    <TextView
-        android:id="@+id/textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="cursive"
-        android:text="Beer Lifesaver"
-        android:textColor="#EAD730"
-        android:textSize="40sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text = "Login"
-        android:id = "@+id/textView"
-        android:layout_below = "@+id/textview"
-        android:textSize = "28dp"
-        android:layout_centerHorizontal = "true"/>
-
-    <EditText
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:id = "@+id/userName"
-        android:hint = "Enter Name"
-        android:focusable = "true"
-        android:textColorHighlight = "#ff7eff15"
-        android:textColorHint = "#ffff25e6"
-        android:layout_marginTop = "46dp"
-        android:layout_below = "@+id/imageView"
-        android:layout_alignParentStart = "true"
-        android:layout_alignParentEnd = "true" />
+    android:baselineAligned="true"
+    android:focusableInTouchMode="true"
+    android:background="@color/background_floating_material_dark">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/beer"
         android:id="@+id/imageView"
-        android:src="@drawable/p5"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:alpha="0.8"
+        android:scaleType="centerCrop"
+        android:layout_alignParentTop="true" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/userName"
-        android:layout_alignEnd="@+id/userName"
-        android:layout_alignParentStart="true"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColorHint="#ffff299f" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Attempts Left:"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/password"
-        android:layout_alignParentStart="true"
-        android:textSize="18sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_marginTop="150dp"
+            android:text="Email"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/abc_primary_text_disable_only_material_dark" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView3"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toEndOf="@+id/textview"
-        android:textSize="25sp" />
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="15dp"
+            android:layout_height="40dp"
+            android:background="#77ffffff"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="login"
-        android:layout_marginTop="8dp"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/textview" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Password"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:textColor="@color/abc_primary_text_material_dark"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:id="@+id/button2"
-        android:layout_marginTop="8dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/textview" />
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="15dp"
+            android:inputType="textPassword"
+            android:layout_height="40dp"
+            android:background="#77ffffff"/>
 
+        <Button
+            android:id="@+id/bLogin"
+            android:layout_marginBottom="15dp"
+            android:text="Login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFC107"/>
+
+        <TextView
+            android:id="@+id/tvRegisterLink"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:text="Register Here"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/abc_primary_text_material_dark"/>
+    </LinearLayout>
 </RelativeLayout>
