--- a/app/src/main/res/layout/beer_style_list_item.xml
+++ b/app/src/main/res/layout/beer_style_list_item.xml
@@ -6,7 +6,15 @@
     android:layout_marginBottom="2dp"
     android:background="@color/colorSecondaryText">
 
-        <TextView
+
+    <ImageView
+        android:id="@+id/styleImageView"
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/beer"/>
+
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/styleNameTextView"
