--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="progressBar" type="id" />
     <item name="recyclerView2" type="id" />
     <item name="listView" type="id" />
+    <item name="action_logout" type="id" />
 </resources>
